# PyTeacher

./: .coverage  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
book_1/: 01_00_introduction.tex  01_01_history.tex  01_02_sctructure.tex  01_03_virtual.tex  02_00_working_env_setup.tex  02_01_git.tex  02_02_poetry.tex  02_03_commands.tex  03_00_main_types.tex  03_01_numericals.tex  03_02_strings.tex  03_03_collections.tex  03_04_etc.tex  03_05_dynamic.tex  04_00_syntax.tex  04_01_operators.tex  04_02_if.tex  04_03_while.tex  04_04_for.tex  05_00_functions.tex  05_01_base.tex  05_02_iterators.tex  06_00_oop.tex  06_01_class.tex  06_02_inheritance.tex  book.tex
pyteacher/: api.py  bot.py  bot_tools.py  db.py  models.py
tests/: test_bot_tools.py  test_db.py
