[tool.poetry]
name = "pyteacher"
version = "0.0.3"
description = ""
authors = ["wol4aravio <panovskiy.v@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.7.6"
pandas = "^1.2.3"
pydantic = "^1.8.1"
pymongo = "^3.11.3"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
black = "^20.8b1"
rope = "^0.18.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
